delete added, few other tweaks to show and hide

--- a/views/pages/administration.ejs
+++ b/views/pages/administration.ejs
@@ -13,12 +13,28 @@
 		<legend>Choose action:</legend>
 
 		<div>
+			<label><input type="radio" name="navbtn" value="all_users" onclick="allUserDisplay()">Display All Users</label>
 			<label><input type="radio" name="navbtn" value="new_user" onclick="newUserDisplay()">New User</label>
 			<label><input type="radio" name="navbtn" value="editUser" onclick="editUserDisplay()"> Edit User</label>
 			<label><input type="radio" name="navbtn" value="searchForUser" onclick="searchUserDisplay()"> Search For User</label>
 		</div>
 	</fieldset>
 
+	<!-- Display All Users -->
+	<fieldset class="starthidden" id="all_user_fields">
+	<div class="container">
+	<h2>Database Results</h2>
+
+	<ul>
+    <% results.forEach(function(r) { %>
+        <li><%= r.id %> - <%= r.fname %></li>
+    <% }); %>
+	</ul>
+
+	</div>
+	</fieldset>
+
+	
     <!--
     <form method="post" onSubmit="return checkform(this);">
       <input type="text" name="fname" id="fname" required>
@@ -51,6 +67,7 @@
 	  <label>Email: <input type="text" class="input-field" name="email" id="user_email_edit" required></label >
       <label>Password: <input type="text" class="input-field" name="password" id="user_password_edit" required></label >
       <input type="button" id="save_user_edits_btn" value="Save Changes" onclick="updateUser()">
+	  <input type="button" id="delete_user_edits_btn" value="Delete User" onclick="deleteUser()">
   </div>
 	
 <!-- Select Existing User -->
