--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -1,4 +1,7 @@
 <% include ../partials/header %>
 <h1 class="text-center">Employee Recognition App Homepage</h1>
+<% results.forEach(function(r) { %>
+        <div><%= r.id %> - <%= r.fname %></div>
+    <% }); %>
 <% include ../partials/footer %>
 
