--- a/views/pages/administration.ejs
+++ b/views/pages/administration.ejs
@@ -4,31 +4,35 @@
 	<meta charset="utf-8">
 	<title>Administration Page</title>
     <link rel="stylesheet" href="/css/style.css" type="text/css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 </head>
 
 <body>
 
 	<!-- Initial Page Actions -->
-	<fieldset>
-		<legend>Choose action:</legend>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  	<a class="navbar-brand" href="#">Administration</a>
+		<div class="nav navbar-nav container-fluid">
+			<li onclick="allUserDisplay()">All Users</li>
+			<li onclick="newUserDisplay()">New User</li>
+			<li onclick="editUserDisplay()">Edit User</li>
+			<li onclick="searchUserDisplay()">Search</li>
 
-		<div>
-		<label><input type="radio" name="navbtn" value="all_users" onclick="allUserDisplay()">Display All Users</label>
-		<label><input type="radio" name="navbtn" value="new_user" onclick="newUserDisplay()">New User</label>
-		<label><input type="radio" name="navbtn" value="editUser" onclick="editUserDisplay()"> Edit User</label>
-		<label><input type="radio" name="navbtn" value="searchForUser" onclick="searchUserDisplay()"> Search For User</label>
 		</div>
-	</fieldset>
+		</div>
+	</nav>
+<br>
 
 	<!-- Display All Users -->
 	<fieldset class="starthidden" id="all_user_fields">
 	<div class="container">
-	<h2>Database Results</h2>
+	<h5>All Users</h5>
 
 	<ul>
     <% results.forEach(function(r) { %>
         <li>
-			<%= r.id %> - <%= r.fname %> <%= r.lname %> <%= r.email %>
+			<%= r.fname %> <%= r.lname %> email: <%= r.email %>
 		</li>
     <% }); %>
 	</ul>
@@ -39,16 +43,43 @@
 
 	<!-- Create New User -->
 	<fieldset class="starthidden" id="new_user_fields">
-		<legend>Enter New User Information</legend>
-		<form method="post" id="newUserForm" action="/new-user">
-			<label>First Name: <input type="text" name="fname"  required></label>
-			<label>Last Name: <input type="text"  name="lname"  required></label><br>
-			<label>Email: <input type="text" name="email"  required></label>
-			<label>Password: <input type="text" name="password"  required></label>
-			<br>
-
-			<td><input type="submit" name="Add User" value="Add User"></td>
+	<div class="container">
+		<h5>New User Information</h5>
+		<form class="form-horizontal" method="post" id="newUserForm" action="/new-user">
+		<!-- First Name -->
+		<div class="form-group">
+			<label for="inputFirstName" class="col-sm-2 control-label">First Name</label>
+			<div class="col-sm-10">
+				<input id="inputFirstName" type="text" class="form-control" name="fname" placeholder="First Name" required>
+			</div>
+		</div>
+		<!-- Last Name -->
+		<div class="form-group">
+			<label for="inputLastName" class="col-sm-2 control-label">Last Name</label>
+			<div class="col-sm-10">
+				<input id="inputLastName" type="text" class="form-control" name="lname" placeholder="Last Name" required>
+			</div>
+		</div>
+		<!-- Email -->
+		<div class="form-group">
+			<label for="inputEmail" class="col-sm-2 control-label">Email</label>
+			<div class="col-sm-10">
+				<input id="inputEmail" type="email" class="form-control" name="email" placeholder="Email" required>
+			</div>
+		</div>
+		<!-- Password -->
+		<div class="form-group">
+			<label for="inputPassword" class="col-sm-2 control-label">Password</label>
+			<div class="col-sm-10">
+				<input id="inputPassword" type="password" class="form-control" name="password" placeholder="Password" required>
+			</div>
+		</div>
+		<br>
+			
+		<td><input type="submit" name="Add User" value="Add User"></td>
+		
 		</form>
+	</div>
 	</fieldset>
 
 	<!-- Update User -->
@@ -56,14 +87,15 @@
 	<fieldset class="starthidden" id="editable_user_fields">
 	<form method="post" id="editUserForm" action="/update-user">
 
-      <input type="text" style="visibility:hidden" id="user_id_edit" name="id">
-
       <label>First Name: </label><input type="text" class="input-field" name="fname" id="user_fname_edit" required>
 	  <label>Last Name: </label><input type="text" class="input-field" name="lname" id="user_lname_edit" required>
 	  <label>Email: </label><input type="text" class="input-field" name="email" id="user_email_edit" required>
       <label>Password: </label><input type="text" class="input-field" name="password" id="user_password_edit" required>
-	  <label>Signature: </label><input type="text" class="input-field" name="signature" id="user_signature_edit">
 	  <input type="submit" name="Update User" value="Update User">
+	  <!-- Hidden Fields -->
+	  <input type="text" style="visibility:hidden" id="user_id_edit" name="id">
+	  <label>Signature: </label><input type="text" style="visibility:hidden" class="input-field" name="signature" id="user_signature_edit">
+
 	</form>
 
 	<img id="signature_image">
@@ -104,13 +136,12 @@
 </fieldset>
 
 </div>
-    <link rel="stylesheet" href="css/kickstart.css" media="all" /> <!-- KICKSTART -->
+	
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
 
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-		crossorigin="anonymous"></script>
-	<script src="js/kickstart.js"></script> <!-- KICKSTART -->
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="/js/common.js"></script>
 	<script src="/js/administration.js"></script>
 
