added create and read for awards.

--- a/views/pages/user/login.ejs
+++ b/views/pages/user/login.ejs
@@ -3,8 +3,8 @@
   <div class="alert alert-danger" role="alert">Invalid Login. Please try again.</div>
 <% } %>
 
-<h1 class="text-center">Employee Recognition App</h1>
 <form action="/user/login/validate" method="POST">
+  <legend>Log In</legend>
   <div class="form-group">
     <label for="email">Email Address</label>
     <input type="email" class="form-control" name="email">
