--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,3 +7,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body class="container" style="max-width: 768px">
+  <nav class="navbar navbar-light bg-light">
+    <span class="navbar-brand mb-0 h1">Employee Recognition App</span>
+  </nav>
