--- a/views/pages/user/awards.ejs
+++ b/views/pages/user/awards.ejs
@@ -1,4 +1,5 @@
 <% include ../../partials/header %>
+
 <h1 class="text-center">Awards</h1>
 <table class="table">
   <thead>
@@ -16,8 +17,8 @@
         <th scope="row"><%= awards[i].id %></th>
         <td><%= awards[i].name %></td>
         <td><%= awards[i].email %></td>
-        <td><%= awards[i].time %></td>
-        <td><%= awards[i].date %></td>
+        <td><%= moment(awards[i].time, 'HH:mm:ss').format('h:mm A') %></td>
+        <td><%= awards[i].date.toLocaleDateString("en-US") %></td>
       </tr>
     <% } %>
   </tbody>
