--- a/views/pages/user/home.ejs
+++ b/views/pages/user/home.ejs
@@ -15,11 +15,11 @@
   </div>
   <div class="form-group">
     <label for="time">Time</label>
-    <input type="time" class="form-control" name="time">
+    <input type="time" class="form-control ui-timepicker-input" name="time">
   </div>
   <div class="form-group">
     <label for="date">Date</label>
-    <input type="date" class="form-control" name="date">
+    <input data-toggle="datepicker" type="date" class="form-control" name="date">
   </div>
   <button type="submit" class="btn btn-primary d-block mx-auto">Submit</button>
 </form>
