--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,5 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Employee Recognition App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.css" crossorigin="anonymous">
   </head>
   <body class="container" style="max-width: 768px">
+  <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="/user/home">Employee Recognition App</a>
+  </nav>
