--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,3 +15,22 @@
     color: red;
     font-size: 200%;
 }
+
+.wrapper {
+  position: relative;
+  width: 200px;
+  height: 100px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.signature-pad {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width:200px;
+  height:100px;
+  background-color: white;
+}
