--- a/views/pages/admin/administration.ejs
+++ b/views/pages/admin/administration.ejs
@@ -155,9 +155,10 @@
   <!-- Update Signature -->
   <fieldset class="starthidden" id="editable_user_signature">
     <div class="wrapper">
-      <canvas id="signature-pad" class="signature-pad" width=400 height=200></canvas>
+      <canvas id="signature-pad2" class="signature-pad" width=400 height=200></canvas>
     </div>
     <button id="save-png">Save as PNG</button>
+	<button id="clear">Clear</button>
   </fieldset>
 
 <!-- Select Existing User -->
