--- a/views/pages/admin/administration.ejs
+++ b/views/pages/admin/administration.ejs
@@ -6,23 +6,65 @@
     <link rel="stylesheet" href="/css/style.css" type="text/css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+
 </head>
 
 <body>
 
 	<!-- Initial Page Actions -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  	<a class="navbar-brand" href="#">Administration</a>
+	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+  	<a class="navbar-brand" href="#">Employee Recognition</a>
 		<div class="nav navbar-nav container-fluid">
-			<li onclick="allUserDisplay()">All Users</li>
-			<li onclick="newUserDisplay()">New User</li>
-			<li onclick="editUserDisplay()">Edit User</li>
-			<li onclick="searchUserDisplay()">Search</li>
-
+			<li class="nav id="allUsersNavigation" onclick="allUserDisplay()">All Users</li>
+			<li class="nav id="newUserNavigation" onclick="createNewUser()">New User</li>
+			<li class="nav id="editUserNavigation" onclick="editUserDisplay()">Edit User</li>
+			<li class="nav id="reportsNavigation" onclick="reportsDisplay()">Reporting</li>
+			<li class="nav id="searchNavigation" onclick="searchUserDisplay()">Search</li>
 		</div>
 		</div>
 	</nav>
 	<br>
+	<br>
+
+
+<script>
+
+function getDocHeight(doc) {
+    doc = doc || document;
+    // stackoverflow.com/questions/1145850/
+    var body = doc.body, html = doc.documentElement;
+    var height = Math.max( body.scrollHeight, body.offsetHeight, 
+        html.clientHeight, html.scrollHeight, html.offsetHeight );
+    return height;
+}
+
+function setIframeHeight(id) {
+    var ifrm = document.getElementById(id);
+    var doc = ifrm.contentDocument? ifrm.contentDocument: 
+        ifrm.contentWindow.document;
+    ifrm.style.visibility = 'hidden';
+    ifrm.style.height = "10px"; // reset to minimal height ...
+    // IE opt. for bing/msn needs a bit added or scrollbar appears
+    ifrm.style.height = getDocHeight( doc ) + 4 + "px";
+    ifrm.style.visibility = 'visible';
+}
+
+
+
+</script>
+<!-- Content Area 
+https://www.dyn-web.com/tutorials/iframes/height/
+-->
+<div class="container" height=100>
+<div class="container">
+	<!-- 21:9 aspect ratio -->
+	<!-- <div class="embed-responsive embed-responsive-21by9"> -->
+ 	<iframe id="admin_content-area" frameBorder="0" marginheight="50" class="embed-responsive-item"  width="500" onload="setIframeHeight(this.id)"></iframe> 
+ 	
+
+
+</div>
+
 
 	<!-- Display All Users -->
 	<fieldset class="starthidden" id="all_user_fields">
@@ -40,65 +82,6 @@
 	</div>
 	</fieldset>
 
-
-	<!-- Create New User -->
-	<fieldset class="starthidden" id="new_user_fields">
-	<div class="container">
-		<h5>New User Information</h5>
-		<form class="form-horizontal" method="post" id="newUserForm" action="/new-user">
-		<!-- First Name -->
-		<div class="form-group">
-			<label for="inputFirstName" class="col-sm-2 control-label">First Name</label>
-			<div class="col-sm-10">
-				<input id="inputFirstName" type="text" class="form-control" name="fname" placeholder="First Name" required>
-			</div>
-		</div>
-		<!-- Last Name -->
-		<div class="form-group">
-			<label for="inputLastName" class="col-sm-2 control-label">Last Name</label>
-			<div class="col-sm-10">
-				<input id="inputLastName" type="text" class="form-control" name="lname" placeholder="Last Name" required>
-			</div>
-		</div>
-		<!-- Email -->
-		<div class="form-group">
-			<label for="inputEmail" class="col-sm-2 control-label">Email</label>
-			<div class="col-sm-10">
-				<input id="inputEmail" type="email" class="form-control" name="email" placeholder="Email" required>
-			</div>
-		</div>
-		<!-- Password -->
-		<div class="form-group">
-			<label for="inputPassword" class="col-sm-2 control-label">Password</label>
-			<div class="col-sm-10">
-				<input id="inputPassword" type="password" class="form-control" name="password" placeholder="Password" required>
-			</div>
-		</div>
-		<br>
-
-		<!-- Hidden Fields -->
-	  	<input type="text" style="visibility:hidden" class="input-field" name="signature" id="user_signature_initial">
-
-		<input type="submit" class="col-sm-2 float-right" name="Add User" value="Add User">
-		</form>
-
-		<!-- Signature Entry -->
-		<div id="enter_signature" class="form-group">
-		<label>Draw signature below</label>
-    	<div class="wrapper">
-      	<canvas id="signature-pad" class="signature-pad" width=400 height=200></canvas>
-    	</div>
-		
-    	<button onclick="createSignature()">Save Signature</button>
-		</div>
-		
-	  	<!-- Signature Display -->
-		<div id="hidden_signature" class="form-group starthidden">
-		<label for="new_signature" class="col-sm-2 control-label">Signature</label>
-		<img id="new_signature">
-		</div>
-	</div>
-	</fieldset>
 
 	
 	<!-- Edit User -->
@@ -176,6 +159,16 @@
 	</fieldset>
 </div>
 
+
+	<!-- Display All Users -->
+	<fieldset class="starthidden" id="reports_fields">
+	<div class="container">
+	<h5>Available Reports</h5>
+
+	</fieldset?
+	</div>
+
+
 	<!-- Search For User -->
 	<fieldset class="starthidden" id="search_for_user">
 		<div class="form-group" id="search_controls">
@@ -194,6 +187,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="/js/common.js"></script>
 	<script src="/js/administration.js"></script>
+
+
 
 </body>
 </html>
