--- a/views/pages/user/home.ejs
+++ b/views/pages/user/home.ejs
@@ -1,27 +1,26 @@
 <% include ../../partials/header %>
-<% if (signin !== null) { %>
-  <div class="alert alert-success" role="alert">Signed in</div>
-<% } %>
+
 <h1 class="text-center">Home</h1>
 <form action="/user/award/create" method="post" class="border rounded">
   <legend>Create Employee Award</legend>
   <div class="form-group">
     <label for="name">Name</label>
-    <input type="text" class="form-control" name="name">
+    <input type="text" class="form-control" name="name" required>
   </div>
   <div class="form-group">
     <label for="email">Email Address</label>
-    <input type="email" class="form-control" name="email">
+    <input type="email" class="form-control" name="email" required>
   </div>
   <div class="form-group">
     <label for="time">Time</label>
-    <input type="time" class="form-control ui-timepicker-input" name="time">
+    <input type="time" class="form-control ui-timepicker-input" name="time" required>
   </div>
   <div class="form-group">
     <label for="date">Date</label>
-    <input data-toggle="datepicker" type="date" class="form-control" name="date">
+    <input data-toggle="datepicker" type="date" class="form-control" name="date" required>
   </div>
   <button type="submit" class="btn btn-primary d-block mx-auto">Submit</button>
 </form>
+
 <% include ../../partials/footer %>
 
