--- a/views/pages/user/login.ejs
+++ b/views/pages/user/login.ejs
@@ -1,18 +1,16 @@
 <% include ../../partials/header %>
-<% if (unauthorized !== null) { %>
-  <div class="alert alert-danger" role="alert">Invalid Login. Please try again.</div>
-<% } %>
 
 <form action="/user/login/validate" method="POST">
   <legend>Log In</legend>
   <div class="form-group">
     <label for="email">Email Address</label>
-    <input type="email" class="form-control" name="email">
+    <input type="email" class="form-control" name="email" required>
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" class="form-control" name="password">
+    <input type="password" class="form-control" name="password" required>
   </div>
   <button type="submit" class="btn btn-primary d-block mx-auto">Submit</button>
 </form>
+
 <% include ../../partials/footer %>
