--- a/views/pages/admin/administration.ejs
+++ b/views/pages/admin/administration.ejs
@@ -17,7 +17,7 @@
 		<div class="nav navbar-nav container-fluid">
 			<li class="nav id="allUsersNavigation" onclick="showUsers()">All Users</li>
 			<li class="nav id="newUserNavigation" onclick="createNewUser()">New User</li>
-			<li class="nav id="editUserNavigation" onclick="editUserDisplay()">Edit User</li>
+			<li class="nav id="editUserNavigation" onclick="displayUserList()">Edit User</li>
 			<li class="nav id="reportsNavigation" onclick="reportsDisplay()">Reporting</li>
 			<li class="nav id="searchNavigation" onclick="searchUserDisplay()">Search</li>
 		</div>
@@ -60,21 +60,6 @@ https://www.dyn-web.com/tutorials/iframes/height/
 </div>
 
 
-	<!-- Display All Users -->
-	<fieldset class="starthidden" id="all_user_fields">
-	<div class="container">
-	<h5>All Users</h5>
-
-	<ul>
-    <% results.forEach(function(r) { %>
-        <li>
-			<%= r.fname %> <%= r.lname %> email: <%= r.email %>
-		</li>
-    <% }); %>
-	</ul>
-
-	</div>
-	</fieldset>
 
 	
 	<!-- Edit User -->
@@ -153,7 +138,7 @@ https://www.dyn-web.com/tutorials/iframes/height/
 </div>
 
 
-	<!-- Display All Users -->
+	<!-- Show Available Reports -->
 	<fieldset class="starthidden" id="reports_fields">
 	<div class="container">
 	<h5>Available Reports</h5>
