--- a/views/pages/admin/edituser.ejs
+++ b/views/pages/admin/edituser.ejs
@@ -10,66 +10,81 @@
 
 <body>
 
-	<!-- Create New User -->
-	<fieldset  id="new_user_fields">
+	<!-- Edit User -->
+	<fieldset class="starthidden" id="editable_user_fields">
 	<div class="container">
-		<h5>New User Information</h5>
-		<form class="form-horizontal" method="post" id="newUserForm" action="/new-user">
+		<h5>Edit User Information</h5>
+		<form method="post" class="form-horizontal" id="editUserForm" action="/update-user">
 		<!-- First Name -->
 		<div class="form-group">
-			<label for="inputFirstName" class="col-sm-2 control-label">First Name</label>
+			<label for="user_fname_edit" class="col-sm-2 control-label">First Name</label>
 			<div class="col-sm-10">
-				<input id="inputFirstName" type="text" class="form-control" name="fname" placeholder="First Name" required>
+				<input id="user_fname_edit" type="text" class="form-control input-field" name="fname" placeholder="First Name" required>
 			</div>
 		</div>
 		<!-- Last Name -->
 		<div class="form-group">
-			<label for="inputLastName" class="col-sm-2 control-label">Last Name</label>
+			<label for="user_lname_edit" class="col-sm-2 control-label">Last Name</label>
 			<div class="col-sm-10">
-				<input id="inputLastName" type="text" class="form-control" name="lname" placeholder="Last Name" required>
+				<input id="user_lname_edit" type="text" class="form-control input-field" name="lname" placeholder="Last Name" required>
 			</div>
 		</div>
 		<!-- Email -->
 		<div class="form-group">
-			<label for="inputEmail" class="col-sm-2 control-label">Email</label>
+			<label for="user_email_edit" class="col-sm-2 control-label">Email</label>
 			<div class="col-sm-10">
-				<input id="inputEmail" type="email" class="form-control" name="email" placeholder="Email" required>
+				<input id="user_email_edit" type="email" class="form-control input-field" name="email" placeholder="Email" required>
 			</div>
 		</div>
 		<!-- Password -->
 		<div class="form-group">
-			<label for="inputPassword" class="col-sm-2 control-label">Password</label>
+			<label for="user_password_edit" class="col-sm-2 control-label">Password</label>
 			<div class="col-sm-10">
-				<input id="inputPassword" type="password" class="form-control" name="password" placeholder="Password" required>
+				<input id="user_password_edit" type="password" class="form-control input-field" name="password" placeholder="Password" required>
 			</div>
 		</div>
-		<br>
-
-		<!-- Hidden Fields -->
-	  	<input type="text" style="visibility:hidden" class="input-field" name="signature" id="user_signature_initial">
-
-
-
-		<!-- Signature Entry -->
-		<div id="enter_signature" class="form-group">
-		<label>Draw signature below</label>
-    	<div class="wrapper">
-      	<canvas id="signature-pad" class="signature-pad" width=400 height=300></canvas>
-    	</div>
-		
-    	<button type="button" onclick="createSignature()">Save Signature</button>
-		</div>
-		
-	  	<!-- Signature Display -->
-		<div id="hidden_signature" class="form-group starthidden">
-		<label for="new_signature" class="col-sm-2 control-label">Signature</label>
-		<img id="new_signature">
+		<!-- Signature -->
+		<div class="form-group">
+		<label for="signature_img" class="col-sm-2 control-label">Signature</label>
+		<img id="signature_image">
 		</div>
 
-		<input type="submit" class="col-sm-2 float-right" name="Add User" value="Add User">
-		</form>	
+		<input type="button" class="col-sm-2" id="signature_edits_btn" value="Change Signature" onclick="updateSignature()">
+		<input type="button" class="col-sm-2" id="delete_user_edits_btn" value="Delete User" onclick="deleteUser()"><br><br>
+	  	<input type="submit" class="col-sm-2" name="Update User" value="Update User">
+
+	  <!-- Hidden Fields -->
+	  <input type="text" style="visibility:hidden" id="user_id_edit" name="id">
+	  <input type="text" style="visibility:hidden" class="input-field" name="signature" id="user_signature_edit">
 	</div>
+	</form>
+	  
+  </fieldset>
+
+  <!-- Update Signature -->
+  <fieldset class="starthidden" id="editable_user_signature">
+    <div class="wrapper">
+      <canvas id="signature-pad2" class="signature-pad" width=400 height=200></canvas>
+    </div>
+    <button id="save-png">Save as PNG</button>
+	<button id="clear">Clear</button>
+  </fieldset>
+
+<!-- Select Existing User -->
+<div class="container">
+	<fieldset id="select_user">
+		<h5>Select a User to Edit</h5>
+          <ul style="list-style-type:none">
+            <% results.forEach(function(r) { %>
+              <li>
+              <input type="radio" name="selected_user" value=<%= r.id %> onclick="editUser()">
+              <%= r.fname %>, <%=r.lname %>
+              </li>
+            <% }); %>
+          </ul>
 	</fieldset>
+</div>
+
 
 	</div>
 
@@ -83,7 +98,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="/js/common.js"></script>
-	<script src="/js/createuser.js"></script>
+	<script src="/js/edituser.js"></script>
 
 </body>
 </html>
