wip not running

--- a/views/pages/admin/administration.ejs
+++ b/views/pages/admin/administration.ejs
@@ -19,7 +19,7 @@
 			<li class="nav id="newUserNavigation" onclick="createNewUser()">New User</li>
 			<li class="nav id="editUserNavigation" onclick="displayUserList()">Edit User</li>
 			<li class="nav id="reportsNavigation" onclick="reportsDisplay()">Reporting</li>
-			<li class="nav id="searchNavigation" onclick="searchUserDisplay()">Search</li>
+			<li class="nav id="searchNavigation" onclick="searchForUser()">Search</li>
 		</div>
 		</div>
 	</nav>
