--- a/views/pages/admin/search.ejs
+++ b/views/pages/admin/search.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>New User</title>
+	<title>Search</title>
     <link rel="stylesheet" href="/css/style.css" type="text/css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -10,7 +10,17 @@
 
 <body>
 
-NYI
+
+	<!-- Search For User -->
+	<fieldset id="search_for_user">
+		<div class="form-group" id="search_controls">
+			<h5>Type in name of user to search for...</h5>
+			<label class="col-sm-2 control-label">Name: <input type="text" class="input-field" id="name_search" required></label >
+    <input type="button" id="search_btn" value="search" onclick="searchForUser()">
+    </div>
+</fieldset>
+
+
 	</div>
 
 	<div class="container" height=200>
@@ -23,7 +33,7 @@ NYI
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="/js/common.js"></script>
-	<script src="/js/reports.js"></script>
+	<script src="/js/search.js"></script>
 
 </body>
 </html>
