--- a/views/pages/user/login.ejs
+++ b/views/pages/user/login.ejs
@@ -1,4 +1,7 @@
 <% include ../../partials/header %>
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="/user/home">Employee Recognition App</a>
+</nav>
 
 <form action="/user/login/validate" method="POST">
   <legend>Log In</legend>
