--- a/views/pages/user/home.ejs
+++ b/views/pages/user/home.ejs
@@ -10,8 +10,9 @@
   <div class="form-group">
     <label for="type_id">Employee of the</label>
     <select class="form-control" name="type_id">
-      <option value="1">1</option>
-      <option value="2">2</option>
+      <% for(var i=0; i<award_types.length; i++) {%>
+        <option value="<%= award_types[i].id %>"><%= award_types[i].name %></option>
+      <% } %>
     </select>
   </div>
   <div class="form-group">
