--- a/views/pages/user/home.ejs
+++ b/views/pages/user/home.ejs
@@ -1,8 +1,4 @@
-<% include ../../partials/header %>
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="/user/home">Employee Recognition App</a>
-  <a class="btn btn-secondary" href="/user/logout">Logout</a>
-</nav>
+<% layout('pages/user/layout') -%>
 
 <h1 class="text-center">Home</h1>
 <form action="/user/award/create" method="post" class="border rounded">
@@ -25,14 +21,11 @@
   </div>
   <div class="form-group">
     <label for="time">Time</label>
-    <input type="time" class="form-control ui-timepicker-input" name="time" required>
+    <input class="form-control ui-timepicker-input" name="time" required>
   </div>
   <div class="form-group">
     <label for="date">Date</label>
-    <input data-toggle="datepicker" type="date" class="form-control" name="date" required>
+    <input data-toggle="datepicker" class="form-control" name="date" required>
   </div>
   <button type="submit" class="btn btn-primary d-block mx-auto">Submit</button>
 </form>
-
-<% include ../../partials/footer %>
-
